# TKR101-REVIEWS-ANALYSIS

./: .gitignore  Dockerfile  README.md  docker-compose-old.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
crawler_weekly/: 260622crawl_pw_json_to_csv_gcp_since0620.py
dags/: 2_weekly_batch_anlysis_final.py  3_gemini_batch_analysis_v2.py  3_gemini_batch_analysis_v3.py  3_weekly_analysis_gcs_to_bq_streaming.py  4_gcs_jsonl_to_bigquery.py  batch_analysis_final.py  weekly_reviews_gcs_to_bq_upsert.py
dags_run_once/: 1_get_low_rating_restaurant.py  2_1_reviews_csv_to_gcs.py  2_2_reviews_gcs_to_bq.py
data/reviews/round5/: reviews_ChIJ5Zls-surQjQRtT-wtUeIkxo.csv  reviews_ChIJY7ekJ7upQjQRD-WjBStDYh4.csv  reviews_ChIJuylXlmysQjQR9Ki2eWi7IfA.csv
scripts/: 260621_crawl_test.py  headless_crawler3.py  restaurant_641_for_crawler.json  url_info_600_round2.json  url_info_600_round3 copy.json  url_info_600_round3.json  url_info_600count.json
sql/: bq_create_table.txt
test/: 3_gemini_batch_analysis_v3.py  3_gemini_batch_analysis_v4.py  4_gcs_jsonl_to_bigquery.py  4_r_anly_gcs_to_bq_streaming.py  get_batch_list.py  recover_clean.py  recover_gemini_batch_results_dag.py
