[project]
name = "dags"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "google-cloud-bigquery>=3.41.0",
    "google-cloud-storage>=3.12.0",
    "google-genai>=2.10.0",
    "playwright>=1.60.0",
    "playwright-stealth>=2.0.3",
    "pymysql>=1.2.0",
]
